# Halide-Learning

./: README.md
halide-opencl/01-test_halide-codegen/: build.sh
halide-opencl/01-test_halide-codegen/result/: code_run_res.txt
halide-opencl/01-test_halide-codegen/src/: CMakeLists.txt  lesson_12_using_the_gpu.cpp
tools/: Halide.txt  PlotCal.py  README.md
tutorial/: CMakeLists.txt  build.sh  cmd.txt
tutorial/result/: gradient.html
tutorial/src/: CMakeLists.txt  lesson_02_input_image.cpp  lesson_03_debugging_1.cpp
